feat: change branch name in action

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,8 +3,7 @@ name: Test
 on:
   push:
     branches:
-      - master
-      - release-v*
+      - main
   pull_request: {}
   workflow_dispatch: {}
 
