--- a/.github/workflow/test.yml
+++ b/.github/workflow/test.yml
@@ -23,7 +23,7 @@ jobs:
           path: '**/node_modules'
           key: npm-v2-${{ hashFiles('**/package-lock.json') }}
           restore-keys: npm-v2-
-      - run: npm i
+      - run: npm install
         if: steps.cache.outputs.cache-hit != 'true'
       - run: npm run coverage
         env:
